SEO: Add sitemap.xml, robots.txt, and meta tags for Google indexing

--- a/index.html
+++ b/index.html
@@ -5,7 +5,28 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/compass.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BelVoyage - The Art of Extraordinary Travel</title>
+
+  <!-- Primary SEO -->
+  <title>BelVoyage | The Art of Extraordinary Travel</title>
+  <meta name="description"
+    content="BelVoyage curates ultra-luxury, bespoke travel experiences across the world. Private journeys crafted exclusively on request." />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://thebelvoyage.com" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="BelVoyage | The Art of Extraordinary Travel" />
+  <meta property="og:description"
+    content="BelVoyage curates ultra-luxury, bespoke travel experiences across the world." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://thebelvoyage.com" />
+  <meta property="og:image" content="https://thebelvoyage.com/poster.jpeg" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="BelVoyage | The Art of Extraordinary Travel" />
+  <meta name="twitter:description"
+    content="BelVoyage curates ultra-luxury, bespoke travel experiences across the world." />
+  <meta name="twitter:image" content="https://thebelvoyage.com/poster.jpeg" />
 </head>
 
 <body>
